Name:                   date-cache
Version:                0.3.0
Author:                 Kazu Yamamoto <kazu@iij.ad.jp>
Maintainer:             Kazu Yamamoto <kazu@iij.ad.jp>
License:                BSD3
License-File:           LICENSE
Synopsis:               Date cacher
Description:            Formatting time is slow. This package provides
                        mechanisms to cache formatted date.
Category:               System
Cabal-Version:          >= 1.8
Build-Type:             Simple
tested-with:            GHC ==7.8.4 || ==7.10.3 || ==8.0.2 || ==8.2.2 || ==8.4.1

Library
  GHC-Options:          -Wall
  Exposed-Modules:      System.Date.Cache
  Build-Depends:        base >= 4 && < 5
                      , bytestring

Source-Repository head
  Type:                 git
  Location:             git://github.com/kazu-yamamoto/logger.git
