Name:                   fast-logger
Version:                2.4.7
Author:                 Kazu Yamamoto <kazu@iij.ad.jp>
Maintainer:             Kazu Yamamoto <kazu@iij.ad.jp>
License:                BSD3
License-File:           LICENSE
Synopsis:               A fast logging system
Description:            A fast logging system
Homepage:               https://github.com/kazu-yamamoto/logger
Category:               System
Cabal-Version:          >= 1.8
Build-Type:             Simple
extra-source-files:     README.md ChangeLog.md

Library
  GHC-Options:          -Wall
  Exposed-Modules:      System.Log.FastLogger
                        System.Log.FastLogger.File
                        System.Log.FastLogger.Date
  Other-Modules:        System.Log.FastLogger.IO
                        System.Log.FastLogger.FileIO
                        System.Log.FastLogger.IORef
                        System.Log.FastLogger.LogStr
                        System.Log.FastLogger.Logger
  Build-Depends:        base >= 4.5 && < 5
                      , array
                      , auto-update >= 0.1.2
                      , easy-file >= 0.2
                      , bytestring
                      , bytestring-builder
                      , directory
                      , filepath
                      , text
  if os(windows)
      Cpp-Options:      -DWINDOWS
      Build-Depends:    time
                      , Win32
                      , old-locale
  else
      Build-Depends:    unix
                      , unix-time >= 0.2.2

Test-Suite spec
    Main-Is:         Spec.hs
    Hs-Source-Dirs:  test
    Type:            exitcode-stdio-1.0

    Ghc-Options:     -Wall -threaded
    Build-Depends:   base >= 4 && < 5
                   , bytestring
                   , directory
                   , fast-logger
                   , hspec

Source-Repository head
  Type:                 git
  Location:             git://github.com/kazu-yamamoto/logger.git
