name:                monad-logger-syslog
version:             0.1.0.0
synopsis:            rsyslog output for monad-logger
description:         rsyslog output for monad-logger
homepage:            https://github.com/docmunch/monad-logger-rsyslog
license:             MIT
license-file:        LICENSE
author:              Greg Weber
maintainer:          greg@gregweber.info
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  exposed-modules:     System.Log.MonadLogger.Syslog
  ghc-options:        -Wall
  build-depends:       base >=4.6 && <4.7
                     , monad-logger >= 0.3.4.0
                     , fast-logger >= 2.1.0
                     , hsyslog
                     , transformers
                     , text
                     , bytestring

test-suite smoke
  default-language:    Haskell2010

  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: smoke.hs

  build-depends: base, monad-logger, monad-logger-syslog, shelly
