name:                monad-logger
version:             0.3.13.2
synopsis:            A class of monads which can log messages.
description:         Hackage documentation generation is not reliable. For up to date documentation, please see: <http://www.stackage.org/package/monad-logger>.
homepage:            https://github.com/kazu-yamamoto/logger
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            System
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:  ChangeLog.md
                     README.md

source-repository head
  type:              git
  location:          https://github.com/kazu-yamamoto/logger.git

flag template_haskell {
      Description: Enable Template Haskell support
      Default:     True
      Manual:      True
}

library
  exposed-modules:     Control.Monad.Logger
  build-depends:       base                >= 4         && < 5
                     , transformers
                     , transformers-compat >= 0.3
                     , text
                     , stm
                     , stm-chans
                     , lifted-base
                     , resourcet           >= 0.4       && < 1.2
                     , conduit             >= 1.0       && < 1.3
                     , conduit-extra       >= 1.0       && < 1.3
                     , fast-logger         >= 2.0       && < 2.5
                     , transformers-base
                     , monad-control
                     , monad-loops
                     , mtl
                     , bytestring
                     , blaze-builder
                     , exceptions
  if flag(template_haskell)
     build-depends:     template-haskell

  if flag(template_haskell)
     cpp-options: -DWITH_TEMPLATE_HASKELL
