Name:                   wai-logger
Version:                2.3.1
Author:                 Kazu Yamamoto <kazu@iij.ad.jp>
Maintainer:             Kazu Yamamoto <kazu@iij.ad.jp>
License:                BSD3
License-File:           LICENSE
Synopsis:               A logging system for WAI
Description:            A logging system for WAI
Category:               Web, Yesod
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  GHC-Options:          -Wall
  Exposed-Modules:      Network.Wai.Logger
  Other-Modules:        Network.Wai.Logger.Apache
                        Network.Wai.Logger.IP
                        Network.Wai.Logger.IORef
  Build-Depends:        base >= 4 && < 5
                      , blaze-builder
                      , byteorder
                      , bytestring
                      , case-insensitive
                      , fast-logger >= 2.4.5
                      , http-types
                      , network
                      , wai >= 2.0.0
  if os(windows)
      Cpp-Options:      -DWINDOWS
      Build-Depends:    time
                      , old-locale
  else
      Build-Depends:    unix
                      , unix-time >= 0.2.2

Test-Suite doctest
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  HS-Source-Dirs:       test
  Ghc-Options:          -Wall
  Main-Is:              doctests.hs
  Build-Depends:        base
                      , doctest >= 0.10.1

Source-Repository head
  Type:                 git
  Location:             git://github.com/kazu-yamamoto/logger.git
