Name:                   wai-logger
Version:                2.4.0
Author:                 Kazu Yamamoto <kazu@iij.ad.jp>
Maintainer:             Kazu Yamamoto <kazu@iij.ad.jp>
License:                BSD3
License-File:           LICENSE
Synopsis:               A logging system for WAI
Description:            A logging system for WAI
Category:               Web, Yesod
Cabal-Version:          >= 1.10
Build-Type:             Simple
Tested-With:            GHC ==7.8.4 || ==7.10.3 || ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.3

Library
  Default-Language:     Haskell2010
  GHC-Options:          -Wall
  Exposed-Modules:      Network.Wai.Logger
  Other-Modules:        Network.Wai.Logger.Apache
                        Network.Wai.Logger.IP
                        Network.Wai.Logger.IORef
  Build-Depends:        base >= 4 && < 5
                      , byteorder
                      , bytestring
                      , fast-logger >= 3
                      , http-types
                      , network
                      , wai >= 2.0.0
 if impl(ghc >= 8)
      Default-Extensions:  Strict StrictData

Source-Repository head
  Type:                 git
  Location:             git://github.com/kazu-yamamoto/logger.git
