cabal-version: >=1.10
name:          wai-logger
version:       2.4.1
license:       BSD3
license-file:  LICENSE
maintainer:    Kazu Yamamoto <kazu@iij.ad.jp>
author:        Kazu Yamamoto <kazu@iij.ad.jp>
tested-with:
    ghc ==7.8.4 || ==7.10.3 || ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.3

synopsis:      A logging system for WAI
description:   A logging system for WAI(Web Application Interface)
category:      Web, Yesod
build-type:    Simple

source-repository head
    type:     git
    location: https://github.com/kazu-yamamoto/logger.git

library
    exposed-modules:  Network.Wai.Logger
    other-modules:
        Network.Wai.Logger.Apache
        Network.Wai.Logger.IP
        Network.Wai.Logger.IORef

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5,
        byteorder,
        bytestring,
        fast-logger >=3,
        http-types,
        network,
        wai >=2.0.0

    if impl(ghc >=8)
        default-extensions: Strict StrictData
